--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -284,7 +284,7 @@
     <string name="bt_inactive">Bluetooth inactivo</string>
     <string name="bt_active">Bluetooth activo&#8230;</string>
     <string name="bt_error">Problemas con Bluetooth!</string>
-    <string name="bt_packages_sent">Mensajes enviados:</string>
+    <string name="bt_packets_sent">Mensajes enviados:</string>
     <string name="bt_fps">Mensajes por segundo:</string>
     <string name="bt_sample_count">Muestras por mensaje:</string>
     <string name="bt_connect">Conectar a un dispositivo Bluetooth&#8230;</string>
