--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -258,6 +258,7 @@
     <string name="creamy">Creme</string>
     <string name="transition">Transição:</string>
     <string name="fade">Fade</string>
+    <string name="dissolve">Dissolver</string>
     <string name="zoom">Zoom</string>
     <string name="repeat_all">Repetir todas</string>
     <string name="repeat_one">Repetir uma</string>
