--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -258,6 +258,7 @@
     <string name="creamy">Creamy</string>
     <string name="transition">Transition:</string>
     <string name="fade">Fade</string>
+    <string name="dissolve">Dissolve</string>
     <string name="zoom">Zoom</string>
     <string name="repeat_all">Repeat all</string>
     <string name="repeat_one">Repeat one</string>
