--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -257,6 +257,7 @@
     <string name="by_dir_xiph_org">Por Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Creme</string>
     <string name="transition">Transição:</string>
+    <string name="animations">Animações</string>
     <string name="fade">Fade</string>
     <string name="dissolve">Dissolver</string>
     <string name="zoom">Zoom</string>
