--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -257,6 +257,7 @@
     <string name="by_dir_xiph_org">От Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Сливочный</string>
     <string name="transition">Переход:</string>
+    <string name="animations">Анимации</string>
     <string name="fade">Вянуть</string>
     <string name="dissolve">Расплавлять</string>
     <string name="zoom">Зуммировать</string>
