--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -257,6 +257,7 @@
     <string name="by_dir_xiph_org">Від Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Вершковий</string>
     <string name="transition">Перехід:</string>
+    <string name="animations">Анімації</string>
     <string name="fade">В\'янути</string>
     <string name="dissolve">Розплавляти</string>
     <string name="zoom">Зумміровать</string>
