--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -47,6 +47,7 @@
     <string name="opt_use_alternate_typeface">Использовать дислексический шрифт (опция недоступна для данного языка)</string>
     <string name="opt_auto_turn_off">Выключить плеер автоматически после:</string>
     <string name="opt_auto_idle_turn_off">В режиме ожидания, выключить плеер автоматически после:</string>
+    <string name="opt_auto_turn_off_playlist">Выключите проигрыватель при достижении конца списка воспроизведения ("Не повторять" должен быть выбран)</string>
     <string name="opt_keep_screen_on">Держать экран постоянно включённым</string>
     <string name="opt_volume_control_type">Тип регулятора громкости:</string>
     <string name="opt_is_divider_visible">Показывать границу между элементами в списках</string>
@@ -263,6 +264,7 @@
     <string name="zoom">Зуммировать</string>
     <string name="repeat_all">Повтор всех</string>
     <string name="repeat_one">Повторите одну</string>
+    <string name="repeat_none">Не повторять</string>
     <string name="select_everything">Выберите все</string>
     <string name="unselect_everything">Очистить все</string>
     <string name="select">Выберите</string>
