--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -47,6 +47,7 @@
     <string name="opt_use_alternate_typeface">Використовувати діслексичний шрифт (опція не доступна для даної мови)</string>
     <string name="opt_auto_turn_off">Автоматично вимкнути плеєр після:</string>
     <string name="opt_auto_idle_turn_off">У режимі очікування, автоматично вимкнути плеєр після:</string>
+    <string name="opt_auto_turn_off_playlist">Вимкніть програвач при досягненні кінця списку відтворення ("Не повторювати" повинен бути обраний)</string>
     <string name="opt_keep_screen_on">Тримати екран постійно включеним</string>
     <string name="opt_volume_control_type">Тип регулятора гучності:</string>
     <string name="opt_is_divider_visible">Показувати границю між елементами в списках</string>
@@ -263,6 +264,7 @@
     <string name="zoom">Зумміровать</string>
     <string name="repeat_all">Повтор всіх</string>
     <string name="repeat_one">Повторіть одну</string>
+    <string name="repeat_none">Не повторювати</string>
     <string name="select_everything">Виберіть всі</string>
     <string name="unselect_everything">Очистити всі</string>
     <string name="select">Виберіть</string>
