Adding support for multiple audio settings, according to the current audio sink

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -308,4 +308,8 @@
     <string name="bt_not_found">Keine Bluetooth Geräte wurden gefunden :(</string>
     <string name="bt_null_device_name">(BT Gerät)</string>
 
+    <string name="loudspeaker">Lautsprecher</string>
+    <string name="earphones">Kopfhörer</string>
+    <string name="bluetooth">Bluetooth</string>
+
 </resources>
