--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="opt_is_vertical_margin_large">Use large spacing between items in lists</string>
     <string name="opt_handle_call_key">Use Call/Dial key as Play/Pause</string>
     <string name="opt_do_not_attenuate_volume">Do not attenuate music volume when system notifications happen</string>
-    <string name="opt_play_when_headset_plugged">Automatically play when a wired headset is plugged in</string>
+    <string name="opt_play_when_headset_plugged">Automatically play when wired earphones are plugged in</string>
     <string name="opt_block_back_key">Prevent the Back key from returning to the home screen</string>
     <string name="opt_double_click_mode">Use two clicks/touches to play songs in the playlist</string>
     <string name="opt_marquee_title">Spin current song\'s title when it does not fit on the screen</string>
@@ -308,5 +308,9 @@
     <string name="bt_not_paired">No Bluetooth devices were paired :(</string>
     <string name="bt_not_found">No Bluetooth devices were found :(</string>
     <string name="bt_null_device_name">(BT Device)</string>
+
+    <string name="loudspeaker">Loudspeaker</string>
+    <string name="earphones">Earphones</string>
+    <string name="bluetooth">Bluetooth</string>
 
 </resources>
