--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -228,7 +228,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla de retroceso físico siempre regresa al reproductor mientras se van añadiendo las canciones</string>
     <string name="player">Reproductor</string>
     <string name="go_back_to_player">Volver al reproductor</string>
-    <string name="startup_message">Acceso a estaciones de radio Icecast</string>
+    <string name="startup_message">Hay nuevas características disponibles en la opcion \"Efectos de audio\" del menú:</string>
     <string name="sort_by_title">Ordenar por titulo</string>
     <string name="sort_by_artist">Ordenar por artista</string>
     <string name="sort_by_album">Ordenar por álbum</string>
