--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -229,7 +229,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player while adding songs</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
-    <string name="startup_message">Access to Icecast online radio stations</string>
+    <string name="startup_message">There are new features available in the \"Audio effects\" menu:</string>
     <string name="sort_by_title">Sort by title</string>
     <string name="sort_by_artist">Sort by artist</string>
     <string name="sort_by_album">Sort by album</string>
