--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -311,5 +311,8 @@
     <string name="loudspeaker">Altoparlante</string>
     <string name="earphones">Auriculares</string>
     <string name="bluetooth">Bluetooth</string>
+    <string name="follow_current_song">Seguir canción actual en la pantalla principal</string>
+    <string name="announce_current_song">Avisar cuando la canción actual cambia</string>
+    <string name="place_title_at_the_bottom">Poner el título en la parte inferior</string>
 
 </resources>
