--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -311,5 +311,8 @@
     <string name="loudspeaker">Haut-parleur</string>
     <string name="earphones">Écouteurs</string>
     <string name="bluetooth">Bluetooth</string>
+    <string name="follow_current_song">Suivez morceau en cours sur l\'écran principal</string>
+    <string name="announce_current_song">Annoncer lorsque la morceau en cours change</string>
+    <string name="place_title_at_the_bottom">Placez le titre au fond</string>
 
 </resources>
